--- a/english/index_en.html
+++ b/english/index_en.html
@@ -129,82 +129,82 @@
 
             <!-- Needles and Syringes -->
             <div class="grupo1">
-                <a href="#" class="cardProducto">
+                <div class="cardProducto">
                     <img src="../assets/img/ManplaDeNylon.png" alt="Product image">
                     <p>Nylon mittens - Box of 100 units</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="../assets/img/GuanteLatexBlanco1.png" alt="Product image">
                     <p>Latex gloves - Box of 100 units</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="../assets/img/GuanteLatexM.png" alt="Product image">
                     <p>Blue nitrile gloves - Box of 100 units</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="../assets/img/GuantesLatexNegros.png" alt="Product image">
                     <p>Black nitrile gloves - Box of 100 units</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="../assets/img/GuantesCirujia.png" alt="Product image">
                     <p>Sterile surgical gloves</p>
-                </a>
+                </div>
             </div>
 
             <!-- Gloves -->
             <div class="grupo2">
-                <a href="#" class="cardProducto">
+                <div class="cardProducto">
                     <img src="../assets/img/Jeringas1ML.png" alt="Product image">
                     <p>Needles of different sizes</p>
-                </a>
+                </div>
             </div>
 
             <!-- Nursing/Disposables -->
             <div class="grupo3">
-                <a href="#" class="cardProducto">
+                <div class="cardProducto">
                     <img src="../assets/img/MantaGasa.png" alt="Product image">
                     <p>Gauze blankets</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="../assets/img/AparatoPresion.png" alt="Product image">
                     <p>Blood Pressure Monitor</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="../assets/img/Termometro.png" alt="Product image">
                     <p>Digital thermometer</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="../assets/img/Mallatubular.png" alt="Product image">
                     <p>Tubular mesh</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="../assets/img/Llave3Vias.png" alt="Product image">
                     <p>3-way stopcocks</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="../assets/img/HojasBisturi.png" alt="Product image">
                     <p>Scalpel blade</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="../assets/img/MuestraOrina.png" alt="Product image">
                     <p>Urine containers</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="../assets/img/Rinon.png" alt="Product image">
                     <p>Disposable kidney</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="../assets/img/Estetoscopio.png" alt="Product image">
                     <p>Stethoscope</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="../assets/img/Mariposa.png" alt="Product image">
                     <p>Butterflies</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="../assets/img/Especulo.png" alt="Product image">
                     <p>Speculums</p>
-                </a>
+                </div>
             </div>
 
             <!-- Sterilizations -->
@@ -242,38 +242,38 @@
 
             <!-- Disposable Material -->
             <div class="grupo5">
-                <a href="#" class="cardProducto">
+                <div class="cardProducto">
                     <img src="../assets/img/TunicaTNT.png" alt="Product image">
                     <p>Disposable scrub Tnt</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="../assets/img/CubreZapatosTNT.png" alt="Product image">
                     <p>Shoe covers with elastic</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="../assets/img/GorroDescartable.png" alt="Product image">
                     <p>Disposable caps</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="../assets/img/Mascarilla-KN95.png" alt="Product image">
                     <p>KN95 mask</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="../assets/img/PantalonDesechable.png" alt="Product image">
                     <p>Disposable blue pants</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="../assets/img/Mascarilla.png" alt="Product image">
                     <p>Facemask</p>
-                </a>
+                </div>
             </div>
 
             <!-- Infusion and Transfusion Equipment -->
             <div class="grupo6">
-                <a href="#" class="cardProducto">
+                <div class="cardProducto">
                     <img src="../assets/img/SetDeInfusion.png" alt="Product image">
                     <p>Macrodrip infusion set</p>
-                </a>
+                </div>
             </div>
         </section>
 
