--- a/index.html
+++ b/index.html
@@ -127,82 +127,82 @@
 
             <!-- Agujas y Jeringas -->
             <div class="grupo1">
-                <a href="#" class="cardProducto">
+                <div class="cardProducto">
                     <img src="./assets/img/ManplaDeNylon.png" alt="Imagen producto">
                     <p>Manoplas nylon - Caja x100un</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="./assets/img/GuanteLatexBlanco1.png" alt="Imagen producto">
                     <p>Guantes de latex - Caja x100un</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="./assets/img/GuanteLatexM.png" alt="Imagen producto">
                     <p>Guantes de nitrilo azules - Caja x100un</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="./assets/img/GuantesLatexNegros.png" alt="Imagen producto">
                     <p>Guantes de nitrilo negros - Caja x100un</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="./assets/img/GuantesCirujia.png" alt="Imagen producto">
                     <p>Guantes de cirugia esteril</p>
-                </a>
+                </div>
             </div>
 
             <!-- Guantes -->
             <div class="grupo2">
-                <a href="#" class="cardProducto">
+                <div class="cardProducto">
                     <img src="./assets/img/Jeringas1ML.png" alt="Imagen producto">
                     <p>Jeringas diferentes medidas</p>
-                </a>
+                </div>
             </div>
 
             <!-- Enfermeria/Descartables -->
             <div class="grupo3">
-                <a href="#" class="cardProducto">
+                <div class="cardProducto">
                     <img src="./assets/img/MantaGasa.png" alt="Imagen producto">
                     <p>Mantas de gasa</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="./assets/img/AparatoPresion.png" alt="Imagen producto">
                     <p>Aparato presion</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="./assets/img/Termometro.png" alt="Imagen producto">
                     <p>Termometro digital</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="./assets/img/Mallatubular.png" alt="Imagen producto">
                     <p>Malla tubular</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="./assets/img/Llave3Vias.png" alt="Imagen producto">
                     <p>Llaves 3 vias</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="./assets/img/HojasBisturi.png" alt="Imagen producto">
                     <p>Hoja de bisturi</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="./assets/img/MuestraOrina.png" alt="Imagen producto">
                     <p>Frascos de orina</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="./assets/img/Rinon.png" alt="Imagen producto">
                     <p>Riñon descartable</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="./assets/img/Estetoscopio.png" alt="Imagen producto">
                     <p>Estetoscopio</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="./assets/img/Mariposa.png" alt="Imagen producto">
                     <p>Mariposas</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="./assets/img/Especulo.png" alt="Imagen producto">
                     <p>Especulos</p>
-                </a>
+                </div>
             </div>
 
             <!-- Esterilizaciones -->
@@ -240,38 +240,38 @@
 
             <!-- Material Desechable -->
             <div class="grupo5">
-                <a href="#" class="cardProducto">
+                <div class="cardProducto">
                     <img src="./assets/img/TunicaTNT.png" alt="Imagen producto">
                     <p>Casaca descartable Tnt</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="./assets/img/CubreZapatosTNT.png" alt="Imagen producto">
                     <p>Cubrezapatos con elastico</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="./assets/img/GorroDescartable.png" alt="Imagen producto">
                     <p>Gorros descartables</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="./assets/img/Mascarilla-KN95.png" alt="Imagen producto">
                     <p>Mascarilla KN95</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="./assets/img/PantalonDesechable.png" alt="Imagen producto">
                     <p>Pantalon descartable</p>
-                </a>
-                <a href="#" class="cardProducto">
+                </div>
+                <div class="cardProducto">
                     <img src="./assets/img/Mascarilla.png" alt="Imagen producto">
                     <p>Tapabocas</p>
-                </a>
+                </div>
             </div>
 
             <!-- Equipos de Infusión y Transfusión -->
             <div class="grupo6">
-                <a href="#" class="cardProducto">
+                <div class="cardProducto">
                     <img src="./assets/img/SetDeInfusion.png" alt="Imagen producto">
                     <p>Equipo infusor macrogotero</p>
-                </a>
+                </div>
             </div>
         </section>
 
